# LTPP

./: .gitignore  Cargo.toml  build-wasm.sh  build.rs  index.html  log4rs.yaml  progress.md  readme.md
notes/: BasicConcpet.md  CodeLogicSummary.md  Physics.md
src/: common.rs  lib.rs  main.rs  objmgr.rs
src/physics/: collision.rs  mod.rs  phymgr.rs  shape.rs
src/render/: camera.rs  lib.rs  mod.rs  model.rs  resource.rs  state.rs  texture.rs  window.rs
src/render/shaders/: edge_shader.wgsl  shader.wgsl
src/shader/: shader.wgsl
