[package]
edition = "2021"
name = "ltpp"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bytemuck = {version = "1.12", features = ["derive"]}
cfg-if = "1.0.0"
cgmath = "0.18.0"
chrono = "0.4.31"
# env_logger = "0.10.1"
image = "0.24.7"
log = "0.4.20"
pollster = "0.3.0"
timer = "0.2.0"
tobj = {version = "3.2.1", features = ["async"]}
wgpu = "0.17.0"
winit = "0.28.6"

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Other dependencies
reqwest = {version = "0.11"}
web-sys = {version = "0.3", features = [
  "Document",
  "Window",
  "Element",
  "Location",
]}

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
