[package]
edition = "2021"
name = "ltpp"
version = "0.1.0"
default-run = "ltpp_run"
authors = ["virgilma"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "ltpp_run"

[dependencies]
anyhow = "1.0.75"
bytemuck = {version = "1.12", features = ["derive"]}
cfg-if = "1.0.0"
cgmath = "0.18.0"
chrono = "0.4.31"
# env_logger = "0.10.1"
image = "0.24.7"
log = "0.4"
pollster = "0.3.0"
timer = "0.2.0"
tobj = {version = "3.2.1", features = ["async"]}
web-time = "1.1"
wgpu = "23.0"
winit = "0.30"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
imgui = "0.12"
imgui-wgpu = {git = "https://github.com/Yatekii/imgui-wgpu-rs.git", rev = "bab0725a"}
imgui-winit-support = "0.13.0"
log4rs = "1.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
getrandom = { version = "0.3", features = ["wasm_js"] }
wgpu = { version = "23.0", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "HtmlCanvasElement",
    "Location",
]}
reqwest = "0.12.12"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
